manifests/seraphim/forgejo/HTTPRoute-forgejo.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "10"
  name: forgejo
  namespace: forgejo
spec:
  hostnames:
    - dev.vegapunk.cloud
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal
      namespace: gateway
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: forgejo-http
          port: 3000
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
